# toy_os

./: Cargo.toml  rust-toolchain
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  lib.rs  main.rs
kernel/src/interrupts/: idt.rs  mod.rs
kernel/tests/: basic_boot.rs
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
src/interrupts/: mod.rs
tests/: should_panic.rs
