[package]
name = "toy_os"
version = "0.1.0"
edition = "2018"

[lib]
name = "toy_os"
path = "src/lib.rs"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "--serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
