[package]
name = "toy_os"        # or any other name
version = "0.1.0"
edition = "2018"
resolver = "2"
default-run = "toy_os"

[workspace]
members = ["kernel"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.10"

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"
