# Cargo.toml

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
volatile = "0.6.1"
spin = "0.9.8"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
bit_field = "0.10.2"
log = { version = "0.4.25", default-features = false }
bootloader_api = "0.11.10"
bootloader-x86_64-common = "0.11.10"
conquer-once = { version = "0.4.0", default-features = false }

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
